added functional updateQuiz endpoint
