# backend/src/main/resources/api.yaml
@@ -96,7 +96,7 @@ paths:
     put:
       tags:
       - quiz
-      summary: Update existing quiz
+      summary: Update quiz by ID
       operationId: updateQuiz
       parameters:
         - name: id
@@ -107,10 +107,12 @@ paths:
             type: integer
             format: int64
       responses:
+        '200':
+          description: Updated successfully
         '400':
           description: Invalid ID supplied
         '404':
-          description: Quiz not found
+          description: Resource not found
         '405':
           description: Validation exception
       security:
